<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_doc"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/jadwal_dokter"
            />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_baseline_person_add_alt_1_24"
            android:title="@string/tambahkan_dokter" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>