<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_sketch"
            android:text="@string/data_pasien"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:id="@+id/is_bpjs_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/bpjs"
                android:layout_width="wrap_content"
                android:fontFamily="@font/gabriela"
                android:layout_height="wrap_content"
                android:text="@string/pengguna_bpjs"/>

            <RadioButton
                android:id="@+id/non_bpjs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gabriela"
                android:layout_marginStart="25dp"
                android:text="@string/bukan_pengguna_bpjs" />
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nomor_edt_text"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gabriela"
                android:hint="@string/nomor_kartu_bpjs"
                android:background="@color/white"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gabriela"
                android:hint="@string/hint_nama_pasien"
                android:background="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/umur_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gabriela"
                android:hint="@string/hint_umur_pasien"
                android:background="@color/white"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telp_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gabriela"
                android:hint="@string/hint_nomor_telepon"
                android:background="@color/white"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alamat_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/gabriela"
                android:hint="@string/hint_alamat"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Spinner
            android:id="@+id/poli_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"

            />
        <Spinner
            android:id="@+id/gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"

            />
        <Spinner
            android:id="@+id/blood_spinner"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/extra_edt_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/gabriela"
                android:hint="@string/hint_keterangan" />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:text="@string/daftar_antrian"/>
        

    </LinearLayout>

</ScrollView>