<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.ui.add.AddDocFragment"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:fontFamily="@font/gabriela"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/tambah_dokter"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doc_edt_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gabriela"
            android:hint="@string/hint_nama_dokter"
            android:background="@color/white"
            android:inputType="textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doc_edt_jadwal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gabriela"
            android:hint="@string/hari_kerja_dokter"
            android:background="@color/white"
            android:inputType="textCapSentences"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/doc_edt_spesialis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/gabriela"
            android:hint="@string/hint_spesialis"
            android:background="@color/white"
            android:inputType="textCapWords"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_person_24"
            app:civ_circle_background_color="#adadad"
            app:civ_border_color="@color/black"
            android:layout_centerInParent="true"
            android:clickable="true"
            app:civ_border_width="1dp"
            android:focusable="true" />
        <TextView
            android:id="@+id/textImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black"
            android:visibility="visible"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Pilih Foto"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        android:layout_gravity="center"
        android:text="Tambahkan"/>
    </LinearLayout>
</LinearLayout>